fix header overlap

--- a/src/output.css
+++ b/src/output.css
@@ -339,6 +339,15 @@
   .resize {
     resize: both;
   }
+  .scroll-mt-20 {
+    scroll-margin-top: calc(var(--spacing) * 20);
+  }
+  .scroll-mt-96 {
+    scroll-margin-top: calc(var(--spacing) * 96);
+  }
+  .scroll-pt-20 {
+    scroll-padding-top: calc(var(--spacing) * 20);
+  }
   .grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
   }
@@ -609,11 +618,6 @@
       --tw-shadow-color: color-mix(in oklab, color-mix(in oklab, var(--color-black) 60%, transparent) var(--tw-shadow-alpha), transparent);
     }
   }
-  .transition {
-    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, visibility, content-visibility, overlay, pointer-events;
-    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
-    transition-duration: var(--tw-duration, var(--default-transition-duration));
-  }
   .transition-all {
     transition-property: all;
     transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
@@ -692,11 +696,6 @@
       scale: var(--tw-scale-x) var(--tw-scale-y);
     }
   }
-  .max-sm\:mt-4 {
-    @media (width < 40rem) {
-      margin-top: calc(var(--spacing) * 4);
-    }
-  }
   .max-sm\:mt-5 {
     @media (width < 40rem) {
       margin-top: calc(var(--spacing) * 5);
@@ -758,11 +757,6 @@
       border-width: 2px;
     }
   }
-  .max-sm\:bg-blue-600 {
-    @media (width < 40rem) {
-      background-color: var(--color-blue-600);
-    }
-  }
   .max-sm\:px-0 {
     @media (width < 40rem) {
       padding-inline: calc(var(--spacing) * 0);
@@ -781,11 +775,6 @@
   .max-sm\:pt-24 {
     @media (width < 40rem) {
       padding-top: calc(var(--spacing) * 24);
-    }
-  }
-  .max-sm\:pt-28 {
-    @media (width < 40rem) {
-      padding-top: calc(var(--spacing) * 28);
     }
   }
   .max-sm\:text-2xl {
@@ -808,11 +797,6 @@
   .max-sm\:text-\[1\.4rem\] {
     @media (width < 40rem) {
       font-size: 1.4rem;
-    }
-  }
-  .min-sm\:mt-4 {
-    @media (width >= 40rem) {
-      margin-top: calc(var(--spacing) * 4);
     }
   }
   .sm\:grid-cols-3 {
@@ -879,6 +863,16 @@
   .lg\:w-full {
     @media (width >= 64rem) {
       width: 100%;
+    }
+  }
+  .lg\:scroll-mt-20 {
+    @media (width >= 64rem) {
+      scroll-margin-top: calc(var(--spacing) * 20);
+    }
+  }
+  .lg\:scroll-pt-20 {
+    @media (width >= 64rem) {
+      scroll-padding-top: calc(var(--spacing) * 20);
     }
   }
   .lg\:grid-cols-4 {
